--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -26,6 +26,12 @@ jwt:
     converter:
       principalAttribute: preferred_username
 
+management:
+  cloudwatch:
+    metrics:
+      export:
+        enabled: false
+
 custom:
   auto-confirm-recommendations: true
   use-cognito-as-identity-provider: false
